# pad_automater

./: .env.example  README.md  pyproject.toml
pad_automater/: hedgedoc.py  main.py  nocodb_parser.py
