[tool.poetry]
name = "pad-automater"
version = "0.1.0"
description = ""
authors = ["THIVEND <baptiste.thivend@protonmail.com>"]
readme = "README.md"
packages = [{include = "pad_automater"}]

[tool.poetry.dependencies]
python = "^3.11"
nocodb = "^1.0.1"
mistune = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
